--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<JETTY_VERSION>8.1.17.v20150415</JETTY_VERSION>
 		<MUSTACHE_VERSION>0.8.18</MUSTACHE_VERSION>
 		<JERSEY_VERSION>2.7</JERSEY_VERSION>
+
 	</properties>
 
 	<repositories>
@@ -121,6 +122,11 @@
 							<mainClass>io.anserini.rts.testCondor</mainClass>
 							<name>testCondor</name>
 						</program>
+						<program>
+							<mainClass>io.anserini.rts.TweetWord2VecSearcher</mainClass>
+							<name>TweetWord2VecSearcher</name>
+						</program>
+
 
 
 					</programs>
@@ -337,6 +343,24 @@
 			<artifactId>jersey-media-jaxb</artifactId>
 			<version>2.22.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.deeplearning4j</groupId>
+			<artifactId>deeplearning4j-nlp</artifactId>
+			<version>0.6.0</version>
+
+		</dependency>
+		<dependency>
+			<groupId>org.nd4j</groupId>
+			<artifactId>nd4j-native</artifactId>
+			<version>0.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.deeplearning4j</groupId>
+			<artifactId>deeplearning4j-ui</artifactId>
+			<version>0.6.0</version>
+		</dependency>
+
 
 	</dependencies>
+
 </project>
