--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,10 @@
 							<name>IndexTweets</name>
 						</program>
 						<program>
+							<mainClass>io.anserini.index.IndexTweetsUpdatePlace</mainClass>
+							<name>IndexTweetsUpdatePlace</name>
+						</program>
+						<program>
 							<mainClass>io.anserini.search.SearchTweets</mainClass>
 							<name>SearchTweets</name>
 						</program>
